--- a/backend/LabWeb/.env.example
+++ b/backend/LabWeb/.env.example
@@ -20,6 +20,21 @@ DB_DATABASE=iceberg
 DB_USERNAME=usu_lab
 DB_PASSWORD=5n4v3rs4d1d_*20
 
+LDAP_HOSTS=172.16.96.54
+# LDAP_PORT=636
+LDAP_PORT=389
+LDAP_BASE_DN="ou=users,dc=usc,dc=edu,dc=co"
+LDAP_USERNAME="cn=administrator,dc=usc,dc=edu,dc=co"
+LDAP_LOGGING=false
+LDAP_LOGIN=false
+LDAP_AUTO_CONNECT=false
+LDAP_LOGIN_FALLBACK=true
+LDAP_PASSWORD_SYNC=true
+LDAP_USER_ATTRIBUTE=cn
+LDAP_ACCOUNT_SUFFIX=",ou=users,dc=usc,dc=edu,dc=co"
+LDAP_ACCOUNT_PREFIX="cn="
+LDAP_PASSWORD=test
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
