--- a/backend/LabWeb/.env.example
+++ b/backend/LabWeb/.env.example
@@ -13,7 +13,7 @@ DB_DATABASE=BDlab
 DB_USERNAME=10carabalo
 DB_PASSWORD=1111
 
-DB_CONNECTION=oracle
+DB_CONNECTION=mysql
 DB_HOST=172.16.96.32
 DB_PORT=1521
 DB_DATABASE=iceberg
