--- a/backend/LabWeb/composer.json
+++ b/backend/LabWeb/composer.json
@@ -10,11 +10,13 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "directorytree/ldaprecord": "^2.4",
+        "directorytree/ldaprecord-laravel": "^2.3",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^2.0",
         "orangehill/iseed": "^2.6"
     },
     "require-dev": {
