--- a/backend/LabWeb/composer.json
+++ b/backend/LabWeb/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5|^8.0",
+        "php": "8.0",
         "barryvdh/laravel-dompdf": "^0.9.0",
         "directorytree/ldaprecord": "^2.4",
         "directorytree/ldaprecord-laravel": "^2.3",
